2001-12-14  Morten Welinder  <terra@diku.dk>

	* dialog-cell-format.c (fmt_dialog_init_format_page): Sort
	currencies in drop-down.

	* dialog-function-select.c (function_list_fill): Sort the
	functions by name.

2001-12-13  Andreas J. Guelzow  <aguelzow@taliesin.ca>

	* dialog-stf-fixed-page.c (fixed_page_autodiscover) : 
	  first split is not the end of a column (Bug #66433)
	* dialogs/dialog-analysis-tools.c : alphabetize 
	(dialog_ftest_tool_init) : fix typo (Bug #66880)
	
2001-12-13  Jody Goldberg <jody@gnome.org>

	* dialog-cell-sort.c (dialog_cell_sort) : changes to range_has_header.

2001-12-12  Jody Goldberg <jody@gnome.org>

	* dialog-cell-format.c (set_initial_focus) : const.

2001-12-12  Jody Goldberg <jody@gnome.org>

	* dialog-solver.c (cb_dialog_solve_clicked) : gtk_entry_get_text const.
	* dialog-printer-setup.c (do_fetch_page) : ditto.
	(paper_size_changed) : ditto.
	* dialog-goal-seek.c (cb_dialog_apply_clicked) : ditto.
	* dialog-formula-guru.c (formula_guru_set_expr) : ditto.
	* dialog-autocorrect.c (cb_add_clicked) : ditto.
	* dialog-analysis-tools.c (entry_to_float) : ditto.
	(entry_to_int) : ditto.
	(gnumeric_expr_entry_parse_to_value) : ditto.
	(gnumeric_expr_entry_parse_to_list) : ditto.
	* dialog-advanced-filter.c (dialog_advanced_filter) : ditto.

2001-12-10  Jody Goldberg <jody@gnome.org>

	* dialog-cell-format.c (fmt_dialog_selection_type) : Life is simpler.

2001-12-09  Jody Goldberg <jody@gnome.org>

	* dialog-stf.glade  : only display scrollbars if necessary

2001-12-08  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=64991
	* dialog-search.c (search_clicked) : call e_table_model_pre_change
	  before changing.

2001-12-07  Jody Goldberg <jody@gnome.org>

	* dialog-advanced-filter.c (dialog_advanced_filter) : don't destroy
	  the dialog until we are done with it.

2001-12-03  Andreas J. Guelzow  <aguelzow@taliesin.ca>

	* anova-two.glade : activate labels button and change (1 - alpha)
	  to alpha